--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+<br />
+         
+<button id="copy" class="btn green">Copy to Clipboard</button>
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="test.js"></script>
   </body>
 </html>
